Support -launch.* runtime arguments in launch script
Closes #38